k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-gitops
  labels:
    app: nest-gitops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest-gitops
  template:
    metadata:
      labels:
        app: nest-gitops
    spec:
      containers:
        - name: app
          image: hannumannamdev1992/nest-gitops:16fa2d9
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
